--- a/individual-work/pitra-2k-web-figma-1/styles/_var.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_var.scss
@@ -5,3 +5,4 @@ $header-and-footer-background-color: #cbc1b1;
 $general-background-color: #efeee9;
 $sub-offers-section-text-top-padding: 4vh;
 $button-bg-color: #7c7474;
+$transition-duration-buttons: 0.3s;
