--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -26,12 +26,13 @@
             img {
                 min-width: 100%;
                 height: 90%;
+                margin: 3vh 8% 3vh 8%;
             }
         }
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 3% 0 3%;
+        
 
         .nav-button {
             position: relative;
@@ -40,7 +41,7 @@
                 width: 60px;
                 display: block;
                 /* proužek pod headerem */
-                padding: 8px 10px;
+                padding: 8px 8px;
                 /* transition: all 0.5s;
                 -webkit-transition: all 0.5s; */
             }
