--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -63,12 +63,12 @@ body::-webkit-scrollbar {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 3% 0 3%;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-icon img {
   min-width: 100%;
   height: 90%;
+  margin: 3vh 8% 3vh 8%;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-button {
@@ -80,7 +80,7 @@ body::-webkit-scrollbar {
   width: 60px;
   display: block;
   /* proužek pod headerem */
-  padding: 8px 10px;
+  padding: 8px 8px;
   /* transition: all 0.5s;
                 -webkit-transition: all 0.5s; */
 }
@@ -487,7 +487,6 @@ body::-webkit-scrollbar {
 }
 
 footer {
-  height: 8vh;
   background-color: #cbc1b1;
   position: relative;
   /* fixed smaže škvíru pod */
