--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -26,13 +26,13 @@
             img {
                 min-width: 100%;
                 height: 90%;
-                margin: 3vh 8% 3vh 8%;
+                
             }
         }
         display: flex;
         justify-content: space-between;
         align-items: center;
-        
+        margin: 3vh 2vw 3vh 2vw;
 
         .nav-button {
             position: relative;
