--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -80,6 +80,83 @@
         @include registration-button-mixin
     }
 }
+.nav-bar-sub-main button {
+    text-decoration: none;
+    font-size: 1.3rem;
+    margin: 2%;
+    margin-right: 1.5vw;
+    padding-top: .5vh;
+    padding-right: .9vh;
+    padding-bottom: .5vh;
+    padding-left: .9vh;
+    width: auto;
+    height: auto;
+    cursor: pointer;
+    position: relative;
+    transition-duration: 0.4s;
+    text-align: center;
+    display: inline-flex;
+    color: rgb(4, 4, 4);
+    background-color: rgba(0, 0, 0, 0);
+    border: rgb(4, 4, 4);
+}
+
+.nav-bar-sub-main button::after {
+    content: "";
+    /* musí zde být, aby byl následující obsah */
+    width: 11px;
+    /* velikost borderu horního před hoverem */
+    height: 11px;
+    position: absolute;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    position: absolute;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button::after {
+    top: -1px;
+    /* umístění mini-borderu před hoverem vůči elementu */
+    left: -1px;
+    border-top: rgb(4, 4, 4) 2px solid;
+    border-left: rgb(4, 4, 4) 2px solid;
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button::before {
+    bottom: -1px;
+    right: -1px;
+    border-bottom: rgb(4, 4, 4) 2px solid;
+    border-right: rgb(4, 4, 4) 2px solid;
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover::before {
+    width: 110%;
+    /* jak daleko co pojede */
+    height: 125%;
+    /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover::after {
+    width: 110%;
+    height: 125%;
+    /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
+    cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover {
+    /* transform: scale(110%); */
+    box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+}
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
     .content-container {
