--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -63,12 +63,12 @@ body::-webkit-scrollbar {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 3vh 2vw 3vh 2vw;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-icon img {
   min-width: 100%;
   height: 90%;
-  margin: 3vh 8% 3vh 8%;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-button {
@@ -349,6 +349,90 @@ body::-webkit-scrollbar {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #f8f7ec;
   cursor: pointer;
+}
+
+.nav-bar-sub-main button {
+  text-decoration: none;
+  font-size: 1.3rem;
+  margin: 2%;
+  margin-right: 1.5vw;
+  padding-top: .5vh;
+  padding-right: .9vh;
+  padding-bottom: .5vh;
+  padding-left: .9vh;
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  text-align: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: #040404;
+  background-color: rgba(0, 0, 0, 0);
+  border: #040404;
+}
+
+.nav-bar-sub-main button::after {
+  content: "";
+  /* musí zde být, aby byl následující obsah */
+  width: 11px;
+  /* velikost borderu horního před hoverem */
+  height: 11px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button::before {
+  content: "";
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button::after {
+  top: -1px;
+  /* umístění mini-borderu před hoverem vůči elementu */
+  left: -1px;
+  border-top: #040404 2px solid;
+  border-left: #040404 2px solid;
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button::before {
+  bottom: -1px;
+  right: -1px;
+  border-bottom: #040404 2px solid;
+  border-right: #040404 2px solid;
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover::before {
+  width: 110%;
+  /* jak daleko co pojede */
+  height: 125%;
+  /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover::after {
+  width: 110%;
+  height: 125%;
+  /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
+  cursor: pointer;
+}
+
+.nav-bar-sub-main button:hover {
+  /* transform: scale(110%); */
+  -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
