--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -80,28 +80,7 @@
         @include registration-button-mixin
     }
 }
-.nav-bar-sub-main button {
-    text-decoration: none;
-    font-size: 1.3rem;
-    margin: 2%;
-    margin-right: 1.5vw;
-    padding-top: .5vh;
-    padding-right: .9vh;
-    padding-bottom: .5vh;
-    padding-left: .9vh;
-    width: auto;
-    height: auto;
-    cursor: pointer;
-    position: relative;
-    transition-duration: 0.4s;
-    text-align: center;
-    display: inline-flex;
-    color: rgb(4, 4, 4);
-    background-color: rgba(0, 0, 0, 0);
-    border: rgb(4, 4, 4);
-}
-
-.nav-bar-sub-main button::after {
+.registration-button button::after {
     content: "";
     /* musí zde být, aby byl následující obsah */
     width: 11px;
@@ -112,7 +91,7 @@
     cursor: pointer;
 }
 
-.nav-bar-sub-main button::before {
+.registration-button button::before {
     content: "";
     width: 11px;
     height: 11px;
@@ -121,7 +100,7 @@
     cursor: pointer;
 }
 
-.nav-bar-sub-main button::after {
+.registration-button button::after {
     top: -1px;
     /* umístění mini-borderu před hoverem vůči elementu */
     left: -1px;
@@ -130,7 +109,7 @@
     cursor: pointer;
 }
 
-.nav-bar-sub-main button::before {
+.registration-button button::before {
     bottom: -1px;
     right: -1px;
     border-bottom: rgb(4, 4, 4) 2px solid;
@@ -138,7 +117,7 @@
     cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover::before {
+.registration-button button:hover::before {
     width: 110%;
     /* jak daleko co pojede */
     height: 125%;
@@ -146,14 +125,14 @@
     cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover::after {
+.registration-button button:hover::after {
     width: 110%;
     height: 125%;
     /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
     cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover {
+.registration-button button:hover {
     /* transform: scale(110%); */
     box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
 }
