--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -351,31 +351,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button {
-  text-decoration: none;
-  font-size: 1.3rem;
-  margin: 2%;
-  margin-right: 1.5vw;
-  padding-top: .5vh;
-  padding-right: .9vh;
-  padding-bottom: .5vh;
-  padding-left: .9vh;
-  width: auto;
-  height: auto;
-  cursor: pointer;
-  position: relative;
-  -webkit-transition-duration: 0.4s;
-          transition-duration: 0.4s;
-  text-align: center;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  color: #040404;
-  background-color: rgba(0, 0, 0, 0);
-  border: #040404;
-}
-
-.nav-bar-sub-main button::after {
+.registration-button button::after {
   content: "";
   /* musí zde být, aby byl následující obsah */
   width: 11px;
@@ -387,7 +363,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button::before {
+.registration-button button::before {
   content: "";
   width: 11px;
   height: 11px;
@@ -397,7 +373,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button::after {
+.registration-button button::after {
   top: -1px;
   /* umístění mini-borderu před hoverem vůči elementu */
   left: -1px;
@@ -406,7 +382,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button::before {
+.registration-button button::before {
   bottom: -1px;
   right: -1px;
   border-bottom: #040404 2px solid;
@@ -414,7 +390,7 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover::before {
+.registration-button button:hover::before {
   width: 110%;
   /* jak daleko co pojede */
   height: 125%;
@@ -422,14 +398,14 @@ body::-webkit-scrollbar {
   cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover::after {
+.registration-button button:hover::after {
   width: 110%;
   height: 125%;
   /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
   cursor: pointer;
 }
 
-.nav-bar-sub-main button:hover {
+.registration-button button:hover {
   /* transform: scale(110%); */
   -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
