--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -19,6 +19,7 @@
         input {
             background-color: #cdcac7;
             border: 1px solid #cdcac7;
+            margin-top: 3vh;
         }
         .contact-content-sub-item:nth-child(1) {
             margin-top: 1vh; /* dodělat mezery mezi inputy */
@@ -41,6 +42,12 @@
             box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
             color: $general-background-color;
             cursor: pointer;
+        }
+        transition-duration: $transition-duration-buttons;
+
+        button:hover {
+            scale: 110%;
+            transition-duration: $transition-duration-buttons;
         }
     }
 }
@@ -75,7 +82,8 @@
             row-gap: 2vh;
             column-gap: 1vw;
             input {
-                width: max-content;
+                width: 100%;
+                margin-top: 0;
             }
             .contact-content-sub-item:nth-child(1) {
                 grid-area: 1 / 1 / 1 / 1;
