--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -349,66 +349,14 @@ body::-webkit-scrollbar {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #f8f7ec;
   cursor: pointer;
-}
-
-.registration-button button::after {
-  content: "";
-  /* musí zde být, aby byl následující obsah */
-  width: 11px;
-  /* velikost borderu horního před hoverem */
-  height: 11px;
-  position: absolute;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  cursor: pointer;
-}
-
-.registration-button button::before {
-  content: "";
-  width: 11px;
-  height: 11px;
-  position: absolute;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  cursor: pointer;
-}
-
-.registration-button button::after {
-  top: -1px;
-  /* umístění mini-borderu před hoverem vůči elementu */
-  left: -1px;
-  border-top: #040404 2px solid;
-  border-left: #040404 2px solid;
-  cursor: pointer;
-}
-
-.registration-button button::before {
-  bottom: -1px;
-  right: -1px;
-  border-bottom: #040404 2px solid;
-  border-right: #040404 2px solid;
-  cursor: pointer;
-}
-
-.registration-button button:hover::before {
-  width: 110%;
-  /* jak daleko co pojede */
-  height: 125%;
-  /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
-  cursor: pointer;
-}
-
-.registration-button button:hover::after {
-  width: 110%;
-  height: 125%;
-  /* box-shadow: 0px 0px 5px 10px rgba(0, 0, 0, 0.253);  */
-  cursor: pointer;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 .registration-button button:hover {
-  /* transform: scale(110%); */
-  -webkit-box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.1);
+  scale: 110%;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
@@ -806,6 +754,7 @@ footer .footer-information {
 .contact-content-container .contact-content-sub-container input {
   background-color: #cdcac7;
   border: 1px solid #cdcac7;
+  margin-top: 3vh;
 }
 
 .contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(1) {
@@ -825,6 +774,8 @@ footer .footer-information {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 2.3em;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 .contact-content-container .registration-button-contact button {
@@ -836,6 +787,12 @@ footer .footer-information {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #efeee9;
   cursor: pointer;
+}
+
+.contact-content-container .registration-button-contact button:hover {
+  scale: 110%;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
@@ -879,9 +836,8 @@ footer .footer-information {
             column-gap: 1vw;
   }
   .contact-content-container .contact-content-sub-sub-container input {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
+    width: 100%;
+    margin-top: 0;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
     -ms-grid-row: 1;
