--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -112,8 +112,9 @@ body::-webkit-scrollbar {
 
 .nav-bar-container .nav-bar-sub-container .buttons-contaier {
   /* display: none; */
-  position: relative;
-  z-index: 8;
+  /* position: relative;
+            z-index: 8; */
+  display: none;
 }
 
 @media only screen and (min-width: 1280px) and (min-height: 720px) and (orientation: landscape) {
@@ -122,11 +123,6 @@ body::-webkit-scrollbar {
   }
   .nav-bar-container .nav-bar-sub-container .nav-button {
     display: none;
-  }
-  .nav-bar-container .buttons-contaier {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
   }
 }
 
