--- a/individual-work/Tests/style.css
+++ b/individual-work/Tests/style.css
@@ -4,46 +4,41 @@
 }
 
 body {
-  background: #171717;
-  background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);
+  /* background: #171717cd; */
+  /*     background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);*/
   background-size: 300px 300px;
-}
-
-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .container {
   background-color: white;
-  max-width: 70em;
-  -webkit-transition-duration: .5s;
-          transition-duration: .5s;
+  max-width: 50vw;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
   padding: 5em;
   border-radius: 25px;
-  margin-top: 5Em;
-  -webkit-box-shadow: 0px 0px 150px 2px white;
-          box-shadow: 0px 0px 150px 2px white;
-  -webkit-filter: blur(0.8rem);
-          filter: blur(0.8rem);
-  transition-duration: .5s;
+  margin-inline: auto;
+  margin-top: 5em;
+  /* margin: 5em; */
+  border: 5px black solid;
+  -webkit-box-shadow: 0px 0px 60px 20px rgba(0, 0, 0, 0.382);
+          box-shadow: 0px 0px 60px 20px rgba(0, 0, 0, 0.382);
+  transition-duration: 0.5s;
 }
 
 .container p {
-  font-family: myFirstFont;
-  font-size: 2rem;
-  -webkit-filter: drop-shadow(20px 10px 10px #171736);
-          filter: drop-shadow(20px 10px 10px #171736);
+  /*  font-family: myFirstFont; */
+  font-size: 1.5rem;
+  /*         filter: drop-shadow(20px 10px 10px #171736);
+ */
+}
+
+.container h1 {
+  /* font-family: myFirstFont; */
 }
 
 .container:hover {
-  -webkit-filter: blur(0);
-          filter: blur(0);
-  -webkit-transition-duration: .5s;
-          transition-duration: .5s;
+  /* filter: blur(0); */
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 /*# sourceMappingURL=style.css.map */
