--- a/individual-work/Tests/style.scss
+++ b/individual-work/Tests/style.scss
@@ -22,12 +22,17 @@ body {
     transition-duration: 0.5s;
     p {
         /*  font-family: myFirstFont; */
-        font-size: 1.5rem;
+        font-size: 2rem;
         /*         filter: drop-shadow(20px 10px 10px #171736);
  */
+        font-family: myFirstFont;
     }
     h1 {
         /* font-family: myFirstFont; */
+        font-size: 3rem;
+        font-family: myFirstFont;
+        display: hidden;
+
     }
 }
 .container:hover {
