--- a/individual-work/wba-projekt-2/styles/_button.scss
+++ b/individual-work/wba-projekt-2/styles/_button.scss
@@ -1,38 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-* {
-    
-    font-family: "Poppins", sans-serif;
-}
+/* 
 body {
     min-height: 100vh;
     background: linear-gradient(#7d6cfc, #c635ea);
+} */
+.button-container {
+    /*  display: flex;
+    justify-content: end; */
 }
 .action {
-    position: fixed;
+    /* position: fixed; */
     bottom: 50px;
     left: 50px;
     width: 50px;
     height: 50px;
     background: #fff;
     border-radius: 50%;
+    border: 2px solid black;
     cursor: pointer;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); */
 }
 .action span {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #000000;
     font-size: 2em;
+    color: #000000;
     transition: 0.3s ease-in-out;
+    font-family: "Poppins", sans-serif;
 }
-.action.active span {
+/* .action.active span {
     transform: rotate(135deg);
 }
-
 .action ul {
     position: absolute;
     bottom: 55px;
@@ -74,3 +76,4 @@ body {
     opacity: 0.8;
     transform: scale(1);
 }
+ */
