--- a/individual-work/wba-projekt-2/styles/style.scss
+++ b/individual-work/wba-projekt-2/styles/style.scss
@@ -1,4 +1,23 @@
 @import "reset";
 @import "header";
-@import "button";
 
+html,
+body {
+    scroll-behavior: smooth;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    /* font-family: 'Quicksand', sans-serif; */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    /* background-image: url("leaf.jpg");*/
+    /*  background: #171717; */
+  /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
+    background-size: 210px 210px; */
+    margin-inline: 100px;
+}
