--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -88,23 +88,6 @@ select {
       -ms-flex-align: center;
           align-items: center;
   border: 1px solid blue;
-}
-
-.navbar-main .logo-container {
-  border: 1px solid red;
-}
-
-.navbar-main .logo-container img {
-  height: 50px;
-}
-
-.navbar-main .button-container {
-  /*  display: flex;
-        justify-content: end; */
-  /* body {
-         min-height: 100vh;
-        background: linear-gradient(#7d6cfc, #c635ea);} */
-  border: 1px solid green;
   /* .action.active span {
     transform: rotate(135deg);
 }
@@ -152,16 +135,38 @@ select {
  */
 }
 
-.navbar-main .button-container .button1 li {
+.navbar-main .logo {
+  border: 1px solid red;
+}
+
+.navbar-main .logo img {
+  height: 50px;
+}
+
+.navbar-main .button {
+  /*  display: flex;
+        justify-content: end; */
+  /* body {
+         min-height: 100vh;
+        background: linear-gradient(#7d6cfc, #c635ea);} */
+  border: 1px solid green;
+  /* background-color: red; */
+}
+
+.navbar-main .button .button-container li {
+  float: left;
   list-style: none;
-  text-align: center;
+  line-height: 20px;
+  width: 150px;
+  /* margin-right: 30px; */
 }
 
-.navbar-main .button-container ul li a {
+.navbar-main .button .button-container li a {
   text-decoration: none;
+  display: block;
 }
 
-.navbar-main .button-container .action {
+.navbar-main .action {
   display: none;
   /* position: fixed; */
   bottom: 50px;
@@ -175,7 +180,7 @@ select {
   /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); */
 }
 
-.navbar-main .button-container .action span {
+.navbar-main .action span {
   /* position: relative; */
   width: 100%;
   height: 100%;
