--- a/individual-work/wba-projekt-2/styles/style.scss
+++ b/individual-work/wba-projekt-2/styles/style.scss
@@ -1,5 +1,10 @@
 @import "reset";
+@import "var";
+@import "mixin";
 @import "header";
+@import "homepage";
+@import "about";
+@import "footer";
 
 html,
 body {
@@ -19,5 +24,5 @@ body {
     /*  background: #171717; */
   /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
     background-size: 210px 210px; */
-    margin-inline: 100px;
+    margin-inline: 8em;
 }
