--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -77,6 +77,10 @@ select {
   }
 }
 
+header {
+  height: 10vh;
+}
+
 header nav .navbar-main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -211,11 +215,16 @@ main section .first-sub-section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 90vh;
 }
 
 main section .first-sub-section .fss-heading-container {
   text-align: center;
   border: 1px solid green;
+}
+
+main section .first-sub-section .fss-heading-container h1 {
+  background-color: red;
 }
 
 main section .first-sub-section .fss-image-container {
@@ -243,6 +252,93 @@ main section .first-sub-section .fss-paragraph-container {
 main section .first-sub-section .fss-paragraph-container p {
   padding: 4em 6em;
   background-color: #f7f7f7;
+}
+
+main section .second-sub-section {
+  height: 100vh;
+}
+
+main section .second-sub-section .sss-content-organizer {
+  height: 80%;
+  border: 1px solid red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-first-image-desc-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-inline: 10em;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-first-image-desc-container p {
+  height: 100%;
+  width: 25em;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-first-image-desc-container img {
+  width: 100%;
+  max-width: 25em;
+  height: auto;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-second-image-desc-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-inline: 10em;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-second-image-desc-container p {
+  height: 100%;
+  width: 25em;
+}
+
+main section .second-sub-section .sss-content-organizer .sss-second-image-desc-container img {
+  width: 100%;
+  max-width: 25em;
+  height: auto;
+}
+
+main section .second-sub-section .sss-paragraph-container {
+  background-color: #f7f7f7;
+  height: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section .second-sub-section .sss-paragraph-container h2 {
+  margin-inline: 3em;
 }
 
 html,
