--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -80,7 +80,7 @@ main {
             }
         }
         .sss-paragraph-container {
-            background-color: #f7f7f7;
+            background-color: #e11414;
             height: 20%;
             display: flex;
             justify-content: center;
